MOZ-331: add horizontal scroll to table. fix table issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body {
   font-family: var(--font-regular), sans-serif;
   color: var(--color-regular);
   background: var(--color-background);
-  overflow-x: hidden;
 }
 
 * {
