--- a/src/pages/Map/components/Leaderboard/index.module.css
+++ b/src/pages/Map/components/Leaderboard/index.module.css
@@ -23,9 +23,7 @@
 
 .table {
   border-spacing: 0;
-  position: relative;
 }
-
 .header {
   font-style: normal;
   font-weight: 600;
@@ -447,6 +445,15 @@
   content: none;
 }
 
+table {
+  position: relative;
+}
+
+table.bodyWithFocus.focusFixed {
+  position: static;
+  overflow-y: auto;
+}
+
 tbody.bodyWithFocus .row {
   transform: translateY(40px);
 }
@@ -472,7 +479,6 @@ tbody.bodyWithFocus.focusFixed .row {
 }
 
 .row.focusedRow.fixed {
-  position: fixed;
   top: 77px;
 }
 
